Fix dice tooltips not being collapsed

--- a/display/ui/styling/chat.less
+++ b/display/ui/styling/chat.less
@@ -33,6 +33,12 @@
       display: flex;
       flex-flow: row;
     }
+
+    .dice-tooltip {
+      max-height: 0;
+      overflow: hidden;
+      transition: max-height 0.2s ease-out;
+    }
   }
 
   .modifiers {
